# cabal-plan

./: .gitignore  .travis.yml  ChangeLog.md  Makefile  README.md  build-in-docker.sh  cabal-plan.cabal  cabal.haskell-ci  cabal.project  license-report.css
.circleci/: config.yml
.github/workflows/: haskell-ci.yml
example/: cabal-plan.html  cabal-plan.md
fixtures/: acme-kmett-8.4.json  acme-kmett-8.6.json  lens-4.17-ghc-7.8.json  lens-4.17-ghc-8.4.json
src-exe/: CText.hs  Flag.hs  LicenseReport.hs  ProcessLazyByteString.hs  TaggedBool.hs  cabal-plan.hs
src-topograph/: Topograph.hs
src/Cabal/: BuildInfo.hs  Plan.hs
test/unit/: Test.hs
test/unit/Cabal/: PlanTest.hs
