name:                cabal-plan
version:             0.2
x-revision:          1
synopsis:            Library and utiltity for processing cabal's plan.json file
homepage:            https://github.com/hvr/cabal-plan
license:             GPL-3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
copyright:           2016 Herbert Valerio Riedel
category:            Development
build-type:          Simple
cabal-version:       >=1.10
description:
  This package provides a library for decoding @plan.json@ files as
  well as simple tool @cabal-plan@ for extracting and pretty printing
  the information contained in the @plan.json@ file.

extra-source-files:
  ChangeLog.md

tested-with:
  GHC==8.2.1,
  GHC==8.0.2,
  GHC==7.10.3,
  GHC==7.8.4,
  GHC==7.6.3

flag exe
  -- this automatic flag allows the cabal solver to disable the exe:cabal-plan component (& its build-deps);
  -- IOW, emulate https://github.com/haskell/cabal/issues/4660
  description: Enable @exe:cabal-plan@ component

library
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
                       GeneralizedNewtypeDeriving
                       RecordWildCards
  exposed-modules:     Cabal.Plan

  build-depends:       base              >= 4.6   && <4.11
                     , aeson             >= 1     && <1.3
                     , bytestring        == 0.10.*
                     , containers        == 0.5.*
                     , text              == 1.2.*
                     , directory         >= 1.2 && < 1.4
                     , filepath          >= 1.3 && < 1.5
                     , base16-bytestring >= 0.1.1 && < 0.2

  hs-source-dirs:      src

  ghc-options: -Wall


executable cabal-plan
  default-language:    Haskell2010
  other-extensions:    RecordWildCards

  main-is: src-exe/cabal-plan.hs

  if flag(exe)
    -- dependencies w/ inherited version ranges via 'cabal-plan' library
    build-depends: cabal-plan
                 , base
                 , text
                 , containers
                 , bytestring

    -- dependencies which require version bounds
    build-depends: mtl            >= 2.2.1 && < 2.3
                 , ansi-terminal  >= 0.6.2 && < 0.7
                 , optparse-applicative >= 0.13.0 && < 0.15
  else
    buildable: False

  ghc-options: -Wall

benchmark foo
  main-is: src-exe/cabal-plan.hs
  type: exitcode-stdio-1.0

source-repository head
  type: git
  location: https://github.com/hvr/cabal-plan
